Multiple edits made to styles on blog page, new text, site map page completed, blogs altered with links, etc.

--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Nov 11 2021 12:42:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609b95db42dbbe6742532f73" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Our Blog | Ryu Acupuncture</title>
-  <meta content="Weekly offerings of information, knowledge and little known facts about acupuncture and other Traditional Chinese Medicine modalities. Come learn with us!" name="description">
-  <meta content="Our Blog | Ryu Acupuncture" property="og:title">
-  <meta content="Weekly offerings of information, knowledge and little known facts about acupuncture and other Traditional Chinese Medicine modalities. Come learn with us!" property="og:description">
-  <meta content="Our Blog | Ryu Acupuncture" property="twitter:title">
-  <meta content="Weekly offerings of information, knowledge and little known facts about acupuncture and other Traditional Chinese Medicine modalities. Come learn with us!" property="twitter:description">
+  <title>Our Blog | Ryu Acupuncture Clinic</title>
+  <meta content="Weekly offerings of information, knowledge and little known facts about acupuncture and other traditional Chinese medicine (TCM) modalities. Come learn with us!" name="description">
+  <meta content="Our Blog | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="Weekly offerings of information, knowledge and little known facts about acupuncture and other traditional Chinese medicine (TCM) modalities. Come learn with us!" property="og:description">
+  <meta content="Our Blog | Ryu Acupuncture Clinic" property="twitter:title">
+  <meta content="Weekly offerings of information, knowledge and little known facts about acupuncture and other traditional Chinese medicine (TCM) modalities. Come learn with us!" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -72,6 +72,7 @@ drift.load('r73nxaxiv89c');
   <div class="blog_collection_page wf-section">
     <div class="main_container">
       <h1 class="section_h1">Our Blog</h1>
+      <p class="solo_para">Ryu Acupuncture clinic strives to provide as much knowledge as possible with regards to traditional Chinese medicine. For this reason, we have a blog that will be providing in depth knowledge of the services we offer such as acupuncture, traditional Chinese herbs, cupping, moxibustion, auriculotherapy and so on.<br><br>We hope that the blog will bring you all closer to understanding this ancient medicine and its many benefits. If you do wish to learn more about traditional Chinese medicine, feel free to get in touch with us at anytime.</p>
       <div class="w-dyn-list">
         <div role="list" class="blog_collection w-dyn-items w-row">
           <div role="listitem" class="blog_collection_page_item w-dyn-item w-col w-col-3">
@@ -80,6 +81,7 @@ drift.load('r73nxaxiv89c');
                 <div class="blog_collection_card_top"><img src="" loading="lazy" width="392" alt="Acupuncture needles on some stones."></div>
                 <div class="blog_collection_card_bottom">
                   <h2 class="blog_collection_card_bottom_h2"></h2>
+                  <p class="paragraph-10"></p>
                   <div class="blog_collection_card_bottom_publish_date"></div>
                 </div>
               </div>
@@ -95,11 +97,11 @@ drift.load('r73nxaxiv89c');
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block_center">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block_center">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -124,6 +126,9 @@ drift.load('r73nxaxiv89c');
             </ul>
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link">
+                <a href="site-map.html" class="link_white">Site Map</a>
+              </li>
+              <li class="footer_link">
                 <a href="terms-of-use.html" class="link_white">Terms of Use</a>
               </li>
               <li class="footer_link">
@@ -135,7 +140,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block_center">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
@@ -158,7 +163,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block_center">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
