--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Nov 11 2021 12:42:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -84,19 +84,19 @@ drift.load('r73nxaxiv89c');
       <div class="block_text_pre_h2">ABOUT US</div>
       <h2 class="section_h2">Why we&#x27;re the best acupuncture Burbank has to offer</h2>
       <div class="_4_block_row">
-        <div class="_4_block"><img src="images/experienced_acupuncturists.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="A blue outline of a resume with several bullet points of achievement and a ribbon of accolade." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/experienced_acupuncturists.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="A blue outline of a resume with several bullet points of achievement and a ribbon of accolade." class="eastern_medicine_icons">
           <h3 class="icon_h3">Over 20+ Years Experience</h3>
           <p class="icon_para">Years of training and education at prestigious schools, residencies and clinical experience have accumulated to best in class care and treatment.</p>
         </div>
-        <div class="_4_block"><img src="images/top_rated_professionals.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="ad9224af-31de-81b9-ad67-f7fab77d4898" alt="A blue outline of an acupuncturist with 5 stars below him, indicating he is top rated." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/top_rated_professionals.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="ad9224af-31de-81b9-ad67-f7fab77d4898" alt="A blue outline of an acupuncturist with 5 stars below him, indicating he is top rated." class="eastern_medicine_icons">
           <h3 class="icon_h3">5-Star Rated Acupuncturists</h3>
           <p class="icon_para">With a multitude of five-star reviews, we have the reputation and backing you deserve to add balance, harmony and wellness back to your daily life.</p>
         </div>
-        <div class="_4_block"><img src="images/world_class_quality.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="0e48cd1c-115e-0a82-c8d1-fb48af5c798e" alt="A blue outline of a hand holding a shield with a checkmark in it." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/world_class_quality.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="0e48cd1c-115e-0a82-c8d1-fb48af5c798e" alt="A blue outline of a hand holding a shield with a checkmark in it." class="eastern_medicine_icons">
           <h3 class="icon_h3">World Class Quality &amp; Service</h3>
           <p class="icon_para">Our exceptional bedside manner and attention to the details are second to none. We go the extra mile to ensure you have a wonderful visit in our care.</p>
         </div>
-        <div class="_4_block"><img src="images/personalized_care.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="fe2696db-ef17-1778-54a8-3f897ff67ad4" alt="A blue outline of a body sitting in a meditation position, an acupuncture needle and certain points along the spine for treatment." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/personalized_care.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="fe2696db-ef17-1778-54a8-3f897ff67ad4" alt="A blue outline of a body sitting in a meditation position, an acupuncture needle and certain points along the spine for treatment." class="eastern_medicine_icons">
           <h3 class="icon_h3">Personalized Care</h3>
           <p class="icon_para">From check in to check out, your visit will be tailor-made around your body. No cookie cutter or one-size fits all approach here, just pure 1:1 service.</p>
         </div>
@@ -105,7 +105,7 @@ drift.load('r73nxaxiv89c');
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CLEANLINESS</div>
           <h2 class="section_h2_left">Hospital clean office with Covid-19 adherences</h2>
-          <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. We screen all patients and verify with temperature checks. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand sanitizer in the receptions area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy. This is just one of the reasons we&#x27;re the best acupuncture Burbank has to offer.</p>
+          <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. We screen all patients and verify with temperature checks. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand sanitizer in the reception area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy. This is just one of the reasons we&#x27;re the best acupuncture Burbank has to offer.</p>
         </div>
         <div data-w-id="bcd27994-ddcf-2e98-a30f-12638afa79cd" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" title="360 degree view of Ryu Acupuncture"></iframe></div>
@@ -435,7 +435,7 @@ drift.load('r73nxaxiv89c');
 	.w-slider-dot { background: #fafafa; } .w-slider-dot.w-active { background: #3898ec; }
 </style>
       </div>
-      <div data-animation="slide" data-easing="ease-in" data-duration="500" data-infinite="1" class="slider w-slider">
+      <div data-delay="4000" data-animation="slide" class="slider w-slider" data-autoplay="false" data-easing="ease-in" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
         <div class="w-slider-mask">
           <div class="w-slide">
             <p class="testimonial_para"><em class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</em></p><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star">
@@ -546,7 +546,7 @@ drift.load('r73nxaxiv89c');
         </div>
         <div class="_2_block margin_left">
           <div class="w-form">
-            <form id="wf-form-Website-Inquiry---Homepage-Form" name="wf-form-Website-Inquiry---Homepage-Form" data-name="Website Inquiry - Homepage Form" method="get" data-w-id="14a3b0c7-539a-5e94-7777-7ebdf3a887e3" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="form"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="phone" required=""><label for="email-2">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email-2">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" class="w-input"></textarea>
+            <form id="wf-form-Website-Inquiry---Homepage-Form" name="wf-form-Website-Inquiry---Homepage-Form" data-name="Website Inquiry - Homepage Form" method="get" data-w-id="14a3b0c7-539a-5e94-7777-7ebdf3a887e3" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="form"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="phone" required=""><label for="email-2">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email-2">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="field" class="w-input"></textarea>
               <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
             </form>
             <div class="success-message w-form-done">
@@ -563,11 +563,11 @@ drift.load('r73nxaxiv89c');
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block_center">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block_center">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -592,6 +592,9 @@ drift.load('r73nxaxiv89c');
             </ul>
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link">
+                <a href="site-map.html" class="link_white">Site Map</a>
+              </li>
+              <li class="footer_link">
                 <a href="terms-of-use.html" class="link_white">Terms of Use</a>
               </li>
               <li class="footer_link">
@@ -603,7 +606,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block_center">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
@@ -626,7 +629,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block_center">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
