--- a/site-map.html
+++ b/site-map.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Nov 11 2021 12:42:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fabd152b2c7616de336da47" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Site Map</title>
-  <meta content="Site Map" property="og:title">
-  <meta content="Site Map" property="twitter:title">
+  <title>Site Map | Ryu Acupuncture Clinic</title>
+  <meta content="Can&#x27;t find what you&#x27;re looking for? Use our site map to learn about our clinic, shop our services and access a wide variety of health and wellness resources." name="description">
+  <meta content="Site Map | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="Can&#x27;t find what you&#x27;re looking for? Use our site map to learn about our clinic, shop our services and access a wide variety of health and wellness resources." property="og:description">
+  <meta content="Site Map | Ryu Acupuncture Clinic" property="twitter:title">
+  <meta content="Can&#x27;t find what you&#x27;re looking for? Use our site map to learn about our clinic, shop our services and access a wide variety of health and wellness resources." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -64,17 +69,53 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <a href="#" class="_404_link_block w-inline-block">
-    <div data-w-id="b744c25b-b751-fa01-5592-f532d21fea57" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
-  </a>
+  <div class="site_map_section wf-section">
+    <div class="main_container">
+      <h1 class="section_h1">Sitemap</h1>
+      <div class="_4_block_row">
+        <div class="_4_block_left">
+          <h2 class="sitemap_h2">Our Clinic</h2>
+          <a href="index.html" class="blue_link">Home</a>
+          <a href="team.html" class="blue_link">Team</a>
+          <a href="testimonials.html" class="blue_link">Testimonials</a>
+          <a href="blog.html" class="blue_link">Blog</a>
+          <a href="contact.html" class="blue_link">Contact</a>
+        </div>
+        <div class="_4_block_left">
+          <h2 class="sitemap_h2">Our Services</h2>
+          <a href="services.html" class="blue_link">Services Overview</a>
+          <a href="conditions-treated.html" class="blue_link">Conditions Treated</a>
+          <a href="acupuncture.html" class="blue_link">Acupuncture</a>
+          <a href="traditional-chinese-herbs.html" class="blue_link">Traditional Chinese Herbs</a>
+          <a href="cupping.html" class="blue_link">Cupping</a>
+        </div>
+        <div class="_4_block_left">
+          <h2 class="sitemap_h2">Social Media</h2>
+          <a href="https://www.instagram.com/ryuacupuncture/" class="blue_link">Instagram</a>
+          <a href="https://www.facebook.com/Ryu-Acupuncture-Clinic-229147904214537" class="blue_link">Facebook</a>
+          <a href="https://twitter.com/RyuAcupuncture" class="blue_link">Twitter</a>
+          <a href="https://www.linkedin.com/in/jay-ryu-569824211/" class="blue_link">LinkedIn</a>
+          <a href="https://www.youtube.com/channel/UCPa6LxRfZaU_Ml_2v72rDew" class="blue_link">YouTube</a>
+          <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-burbank-3" class="blue_link">Yelp</a>
+          <a href="https://g.page/RyuAcupuncture?gm" class="blue_link">Google</a>
+        </div>
+        <div class="_4_block_left">
+          <h2 class="sitemap_h2">Legal Info</h2>
+          <a href="terms-of-use.html" class="blue_link">Terms of Use</a>
+          <a href="privacy.html" class="blue_link">Privacy Policy</a>
+          <a href="accessibility.html" class="blue_link">Accessibility</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block_center">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block_center">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -99,6 +140,9 @@ drift.load('r73nxaxiv89c');
             </ul>
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link">
+                <a href="site-map.html" aria-current="page" class="link_white w--current">Site Map</a>
+              </li>
+              <li class="footer_link">
                 <a href="terms-of-use.html" class="link_white">Terms of Use</a>
               </li>
               <li class="footer_link">
@@ -110,7 +154,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block_center">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
@@ -133,7 +177,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block_center">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
