--- a/401.html
+++ b/401.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Nov 11 2021 12:42:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f75c2fc0235e6eb492cbd63" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -46,7 +46,7 @@ drift.load('r73nxaxiv89c');
   <div class="utility-page-wrap">
     <div class="utility-page-content w-password-page w-form">
       <form action="/.wf_auth" method="post" class="utility-page-form w-password-page"><img src="https://d3e54v103j8qbb.cloudfront.net/static/password-page-lock.832ca8e2c9.svg" alt="">
-        <h2 class="section_h2">Protected Page</h2><input type="password" autofocus="true" maxlength="256" name="pass" placeholder="Enter your password" class="w-password-page w-input"><input type="submit" value="Submit" data-wait="Please wait..." class="ryu_button w-password-page w-button">
+        <h2 class="section_h2">Protected Page</h2><input type="password" class="w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="field"><input type="submit" value="Submit" data-wait="Please wait..." class="ryu_button w-password-page w-button">
         <div class="w-password-page w-form-fail">
           <div>Incorrect password. Please try again.</div>
         </div>
