--- a/accessibility.html
+++ b/accessibility.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Nov 11 2021 12:42:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60a0bde88ffd49dc6e753672" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Accessibility</title>
-  <meta content="Accessibility" property="og:title">
-  <meta content="Accessibility" property="twitter:title">
+  <title>Site Accessibility | Ryu Acupuncture Clinic</title>
+  <meta content="Ryu Acupuncture Clinic is committed to making sure that everyone is able and has equal access the internet. To do this, our web design is compliant with WCAG 2.1 standards which make it easy for anyone who needs assistance using these apps - including those who have disabilities such as vision impairments or motor difficulties in certain areas of their body." name="description">
+  <meta content="Site Accessibility | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="Ryu Acupuncture Clinic is committed to making sure that everyone is able and has equal access the internet. To do this, our web design is compliant with WCAG 2.1 standards which make it easy for anyone who needs assistance using these apps - including those who have disabilities such as vision impairments or motor difficulties in certain areas of their body." property="og:description">
+  <meta content="Site Accessibility | Ryu Acupuncture Clinic" property="twitter:title">
+  <meta content="Ryu Acupuncture Clinic is committed to making sure that everyone is able and has equal access the internet. To do this, our web design is compliant with WCAG 2.1 standards which make it easy for anyone who needs assistance using these apps - including those who have disabilities such as vision impairments or motor difficulties in certain areas of their body." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -66,7 +71,7 @@ drift.load('r73nxaxiv89c');
   </div>
   <div class="accessibility_section_main wf-section">
     <div class="main_container">
-      <h1 class="section_h1">Accessibility</h1>
+      <h1 class="section_h1">Site Accessibility</h1>
       <p class="legal_timestamp"><strong>Last updated May 17, 2021</strong></p>
       <h2 class="legal_h2">TABLE OF CONTENTS</h2>
       <ol role="list">
@@ -101,7 +106,7 @@ drift.load('r73nxaxiv89c');
     <div class="main_container">
       <h2 class="legal_h2">2. ACCESSIBILITY ON WWW.RYUACUPUNCTURE.COM</h2>
       <p class="legal_para">
-        <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> makes available UserWay&#x27;s Web Accessibility Widget, which is powered by a dedicated accessibility server. The software allows www.ryuacupuncture.com to improve its compliance with the Web Content Accessibility Guidelines (WCAG 2.1).
+        <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> makes available UserWay&#x27;s Web Accessibility Widget, which is powered by a dedicated accessibility server. The software allows <a href="https://www.ryuacupuncture.com/" class="blue_link">www.ryuacupuncture.com</a> to improve its compliance with the Web Content Accessibility Guidelines (WCAG 2.1).
       </p>
     </div>
   </div>
@@ -132,11 +137,11 @@ drift.load('r73nxaxiv89c');
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block_center">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block_center">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -161,6 +166,9 @@ drift.load('r73nxaxiv89c');
             </ul>
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link">
+                <a href="site-map.html" class="link_white">Site Map</a>
+              </li>
+              <li class="footer_link">
                 <a href="terms-of-use.html" class="link_white">Terms of Use</a>
               </li>
               <li class="footer_link">
@@ -172,7 +180,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block_center">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
@@ -195,7 +203,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block_center">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
