--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Nov 11 2021 12:42:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -80,6 +80,13 @@ drift.load('r73nxaxiv89c');
         <a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>YELP</strong></a>
         <a data-filter=".google" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a>
         <a data-filter=".facebook" href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a>
+      </div>
+      <div class="testimonial_block mix yelp _2021"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
+        <p class="testimonial_para">&quot;I can&#x27;t believe it has taken me 2 years to write this update, but it&#x27;s been a busy time. Dr. Ryu is a special part of our family forever because he helped us to conceive two healthy, beautiful babies within 2 years! After many failed treatments, including failed IVF, along with pregnancy losses, and the attendant mental health issues, Dr. Ryu did something no one else could. We conceived both of our children naturally after Dr. Ryu worked on my hormones and general well-being. I have continued to go back to him for other issues, and have seen many positive effects through taking his specially formulated herb packets, and have total faith in him. His office is fantastic and works with you and your insurance too. Do yourself a favor and put yourself in his hands.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="The default Yelp profile image when a user does not provide one, which is just a silhouette of a person." class="testimonial_image">
+        <div class="testimonial_author">Monica H..</div>
+        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_date">10/12/2021</div>
+        <div class="testimonial_source">Review from Yelp</div>
       </div>
       <div class="testimonial_block mix yelp _2021"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
         <p class="testimonial_para">&quot;I started seeing Dr. Ryu, Veronica and Jennifer consistently in February of 2021 due to infertility issues. After just two months of weekly visits and daily herbal medicine I found out I was pregnant. I owe it all to this team. They are caring, knowledgeable and don&#x27;t focus on your problem but rather on the person as a whole. Anyone going through fertility problems knows what a roller coaster of emotions it is and the team here really focuses on being emotionally supportive. I still go in regularly so they can support me through a healthy pregnancy and I completely trust them and have recommended them to many family and friends.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="The default Yelp profile image when a user does not provide one, which is just a silhouette of a person." class="testimonial_image">
@@ -812,11 +819,11 @@ drift.load('r73nxaxiv89c');
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block_center">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block_center">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -841,6 +848,9 @@ drift.load('r73nxaxiv89c');
             </ul>
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link">
+                <a href="site-map.html" class="link_white">Site Map</a>
+              </li>
+              <li class="footer_link">
                 <a href="terms-of-use.html" class="link_white">Terms of Use</a>
               </li>
               <li class="footer_link">
@@ -852,7 +862,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block_center">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
@@ -875,7 +885,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block_center">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
