--- a/traditional-chinese-herbs.html
+++ b/traditional-chinese-herbs.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Nov 11 2021 12:42:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d42af237a0538a318f5d00" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Traditional Chinese Herbs | Ryu Acupuncture Clinic</title>
-  <meta content="Traditional Chinese Herbs | Ryu Acupuncture Clinic" property="og:title">
-  <meta content="Traditional Chinese Herbs | Ryu Acupuncture Clinic" property="twitter:title">
+  <title>Traditional Chinese Herbs in Burbank, CA | Ryu Acupuncture Clinic</title>
+  <meta content="Ryu Acupuncture Clinic offers traditional Chinese herbs to patients throughout Burbank, California. Our clinic is dedicated to helping people achieve optimal health through the use of acupuncture and herbal remedies. Call us today at 818-841-9790!" name="description">
+  <meta content="Traditional Chinese Herbs in Burbank, CA | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="Ryu Acupuncture Clinic offers traditional Chinese herbs to patients throughout Burbank, California. Our clinic is dedicated to helping people achieve optimal health through the use of acupuncture and herbal remedies. Call us today at 818-841-9790!" property="og:description">
+  <meta content="Traditional Chinese Herbs in Burbank, CA | Ryu Acupuncture Clinic" property="twitter:title">
+  <meta content="Ryu Acupuncture Clinic offers traditional Chinese herbs to patients throughout Burbank, California. Our clinic is dedicated to helping people achieve optimal health through the use of acupuncture and herbal remedies. Call us today at 818-841-9790!" property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -98,11 +103,11 @@ drift.load('r73nxaxiv89c');
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block_center">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block_center">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -127,6 +132,9 @@ drift.load('r73nxaxiv89c');
             </ul>
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link">
+                <a href="site-map.html" class="link_white">Site Map</a>
+              </li>
+              <li class="footer_link">
                 <a href="terms-of-use.html" class="link_white">Terms of Use</a>
               </li>
               <li class="footer_link">
@@ -138,7 +146,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block_center">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
@@ -161,7 +169,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block_center">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
